tests/snapshots/assets__check_file@unit-comment-comment-in-func-call.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-func-call.typ
---
#let f(a, b, c: none) = {
  [#a]
}

#f(1, 2, c: 3)

#f[a][b]

#f(1, /* actually, b is ignored*/ 0, c: /* actually, c is ignored */ 0)
