tests/snapshots/assets__check_file@unit-comment-comment-in-func-call.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/comment-in-func-call.typ
snapshot_kind: text
---
#let f(a, b, c: none) = {
  [#a]
}

#f(1, 2, c: 3)

#f[a][b]

#f(1, /* actually, b is ignored*/ 0, c: /* actually, c is ignored */ 0)

#set text(
  size: 10pt,
  fallback: false,
  // lang: "de",
)

#g(
  1111, // wwww
  2222, /* qqqq */

  3333,
  /* rrrr */ 4444,


  777,


  // 78766


  [88],
)[www]

#g(
  a,
  // aaaa
)
#g(
  // aaaa
)
