tests/snapshots/assets__check_file@unit-comment-comment-in-if.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-if.typ
---
#{
  if /*(condition)*/ true {
  }
  
  if true /*(condition)*/ {
  }
  
  if
   // (condition)
   false {
   }
  if true {
    
  } // (condition)
  else {
    
  }
  
  if true {
  
  }
  else /*(condition)*/ {
  }
}
